tasks/task-cpu-usage-001/execution_log.txt
  File "c:\RAIN PROJECT\Autocoder\tasks\task-cpu-usage-001\generated_code.py", line 1
    Here's the corrected Python script:
        ^
SyntaxError: unterminated string literal (detected at line 1)
